@@ -1,0 +1,105 @@
+"""Fetch prices from Quandl's simple URL-based API.
+
+Quandl is a useful source of alternative data and it offers a simple REST API
+that serves CSV and JSON and XML formats. There's also a Python client library,
+but we specifically avoid using that here, in order to keep Beancount
+dependency-free.
+
+Many of the datasets are freely available, which is why this is included here.
+You can get information about the available databases and associated lists of
+symbols you can use here: https://www.quandl.com/search
+
+If you have a paid account and would like to be able to access the premium
+databases from the Quandl site, you can set QUANDL_API_KEY environment variable.
+
+Use the "<DATABASE_CODE>:<DATASET_CODE>" format to refer to Quandl symbols.
+Note that their symbols are usually identified by "<DATABASE_CODE>/<DATASET_CODE>".
+
+(For now, this supports only the Time-Series API. There is also a Tables API,
+which could easily get integrated. We would just have to encode the
+'datatable_code' and 'format' and perhaps other fields in the ticker name.)
+
+"""
+__copyright__ = "Copyright (C) 2018  Martin Blais"
+__license__ = "GNU GPLv2"
+
+import datetime
+import re
+import os
+
+import requests
+
+from beancount.core.number import D
+from beancount.prices import source
+
+
+class QuandlError(ValueError):
+    "An error from the Quandl API."
+
+
+def parse_ticker(ticker):
+    """Convert ticker to Quandl codes."""
+    if not re.match(r"[A-Z0-9]+:[A-Z0-9]+$", ticker):
+        raise ValueError('Invalid code. Use "<DATABASE>/<DATASET>" format.')
+    return tuple(ticker.split(":"))
+
+
+def fetch_time_series(ticker, date=None):
+    """Fetch"""
+    # Create request payload.
+    database, dataset = parse_ticker(ticker)
+    url = f"https://www.quandl.com/api/v3/datasets/{database}/{dataset}.json"
+    payload = {"limit": 1}
+    if date is not None:
+        payload["start_date"] = (date - datetime.timedelta(days=10)).isoformat()
+        payload["end_date"] = date.isoformat()
+
+    # Add API key, if it is set in the environment.
+    if 'QUANDL_API_KEY' in os.environ:
+        payload['api_key'] = os.environ['QUANDL_API_KEY']
+
+    # Fetch and process errors.
+    response = requests.get(url, params=payload)
+    if response.status_code != 200:
+        raise QuandlError("Invalid response {}: {}".format(response.status_code,
+                                                           response.text))
+    result = response.json()
+    if 'quandl_error' in result:
+        raise QuandlError(result['quandl_error']['message'])
+
+    # Parse result container.
+    dataset = result['dataset']
+    column_names = dataset['column_names']
+    date_index = column_names.index('Date')
+    try:
+        data_index = column_names.index('Adj. Close')
+    except ValueError:
+        data_index = column_naems.index('Close')
+    data = dataset['data'][0]
+
+    # Gather time.
+    time = datetime.datetime.strptime(data[date_index], '%Y-%m-%d')
+
+    # Gather price.
+    # Quantize with the same precision default rendering of floats occur.
+    price_float = data[data_index]
+    price = D(price_float)
+    match = re.search(r'(\..*)', str(price_float))
+    if match:
+        price = price.quantize(D(match.group(1)))
+
+    # Note: There is no currency information in the response (surprising).
+
+    return source.SourcePrice(price, time, None)
+
+
+class Source(source.Source):
+    "Quandl API price extractor."
+
+    def get_latest_price(self, ticker):
+        """See contract in beancount.prices.source.Source."""
+        return fetch_time_series(ticker)
+
+    def get_historical_price(self, ticker, date):
+        """See contract in beancount.prices.source.Source."""
+        return fetch_time_series(ticker, date)
